--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,23 @@
 
       gtag('config', 'UA-168426120-1');
     </script>
+    <style>
+      body {
+        max-width: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      footer {
+        background: #eee;
+        bottom: 0;
+        position: fixed;
+        width: 100%;
+        padding: 0px 10px;
+        font-size: 12px;
+        font-family: courier new;
+      }
+    </style>
 
   </head>
   <body>
@@ -24,5 +41,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <footer>Made with love by <a href="http://leiluspocus.netlify.com">Laïla</a></footer>
   </body>
 </html>
